# Real-Time-Grid-Monitoring-Simulator

./: .env.example  .gitignore  CMakeLists.txt  README.md
proto/: grid_telemetry.proto
src/client/: MainWindow.cpp  MainWindow.h  TelemetryClient.cpp  TelemetryClient.h  main.cpp
src/common/: Env.cpp  Env.h  Telemetry.h
src/core/: DataProcessor.cpp  DataProcessor.h
src/db/: DatabaseManager.cpp  DatabaseManager.h
src/sensor/: main.cpp
src/server/: GridMonitoringService.cpp  GridMonitoringService.h  main.cpp
